--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,6 @@ on:
     branches:
       - main
   pull_request:
-    branches:
-      - main
 
 jobs:
   test:
@@ -14,16 +12,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up Julia
-        uses: julia-actions/setup-julia@v1
+        uses: julia-actions/setup-julia@latest
         with:
-          version: '1.10.3'  
+          version: '1.10.3'
       - name: Install dependencies
-        run: julia --project -e 'using Pkg; Pkg.instantiate()'
-      - name: Run tests
-        run: julia --project -e 'using Pkg; Pkg.test(coverage=true)'
-
-      - name: Upload coverage results
-        uses: codecov/codecov-action@v2.1.0
+        run: julia -e 'using Pkg; Pkg.instantiate()'
+      - name: Run tests with coverage
+        run: julia -e 'using Pkg; Pkg.test(coverage=true)'
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
         with:
-          fail_ci_if_error: true
-          verbose: true
+          token: ${{ secrets.CODECOV_TOKEN }}
