--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 Loess = "4345ca2d-374a-55d4-8d30-97f9976e7612"
 PIDSmoothing = "f1efdae0-c1e0-42d8-8ab3-95746ee5cff3"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
