--- a/Project.toml
+++ b/Project.toml
@@ -11,4 +11,4 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
 
 [targets]
-test = ["Test"]
+test = ["Test" , "Coverage"]
